2001-06-13  Cyrille Chepelov  <chepelov@calixo.net>

	* lib/properties.[ch]: convenience macros around PROP_NOTEBOOKS ;
	new "eye candy" properties: PROP_MULTICOL_(BEGIN|PAGE|END) to lay 
	widgets on several columns, PROP_FRAME_(BEGIN|END) to put widgets
	into a frame box.

	* objects/chronogram/chronoline.c:
	* objects/chronogram/chronoref.c: took advantage of the above to
	make nicer looking dialogs.

	* lib/charconv.[ch]: added charconv_unichar_to_utf8 ("inspired"
	from libunicode's internals).
	* lib/message.c: convert strings to local encoding prior to
	display (UNICODE_WORK_IN_PROGRESS)
	* lib/properties.[ch]: convert strings to local encoding prior to
	display, and back to UTF8 (UNICODE_WORK_IN_PROGRESS).
	* lib/render.h: tagged strings as (utfchar *) instead of (char *)
	* lib/stringprerenderer.[ch]: ditto

	(lib/text.c has been audited for UTF8, but the size of the changes
	make them inappropriate for commit before 0.89)
	
2001-06-12  Cyrille Chepelov  <chepelov@calixo.net>

	* objects/boolequation.h (<save|load>_boolequation): made the 
	prototypes for match the .c file.
	
	* samples/grafcet.dia: minor non-conformance with IEC-848
	fixed (in the transition from step 100 to step 101).

	* lib/properties.[ch]: added a flag (PROP_FLAG_DONT_MERGE) to
	disallow editing of properties if the object is part of a group.

	* objects/chronogram/chronoline.c: 
	* objects/SADT/annotation.c:
	* objects/SADT/box.c:
	* objects/GRAFCET/step.c:
	* objects/GRAFCET/transition.c:
	* objects/GRAFCET/condition.c: took advantage of PROP_FLAG_DONT_MERGE.
	
2001-06-12  Hans Breuer  <hans@breuer.org>

	* lib/libdia.def : removed lazyprop exports
	* lib/makefile.msc : removed lazyprop.obj

	* objects/custom/custom_objects.c : use HAVE_UNISTD_H
	and avoid crashes by always creating a custom->text,
	when (custom->info->has_text) 

	* objects/makefile.msc : removed sybase from build

	* objects/GRAFCET/boolequation.c (<save|load>_boolequation) :